# oxiterm

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.test  README.md  Specyfikacja Terminal+ Amendment.md  Terminalowy HTML_CSS_ Nowy Mainframe.md  authorized_keys.example  bugs.md  bundle_code.sh  demo.sh  docker-compose.test.yml  oxiterm_bundle_2026-05-06_21-15.txt  oxiterm_bundle_2026-05-06_21-16.txt  project_bundle.txt  recenzja.txt  run_site.sh  setup_demo.sh  task.md
.agents/rules/: how-to-comment-rust.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
demo/: .env.example  Dockerfile  Dockerfile.test  app.py  docker-compose.yml  requirements-test.txt  spotify_panel.thtml  spotify_panel_mobile.thtml  spotifycontrol.sh  test_app.py
deploy/: oxiterm.service
docs/: ARCHITECTURE.md  DEMO.md  DEVELOPMENT_GUIDE.md  SPRINT_REPORTS.md  app-server-guide.md  getting-started.md  oxiterm_docs.html  spotify-demo.md  tcss-reference.md  thtml-reference.md
examples/: SSHSpotifyControl.thtml  SSHSpotifyControl_mobile.thtml  counter.thtml  counter_mobile.thtml  features.thtml  features_mobile.thtml  hello.thtml  hello_mobile.thtml  image_demo.thtml  index.thtml  index_mobile.thtml  input_demo.thtml  input_demo_mobile.thtml  loader.json  media_demo.thtml  media_demo_mobile.thtml  navigation_demo.thtml  navigation_demo_mobile.thtml  quickstart.thtml  quickstart_mobile.thtml  showcase.thtml  showcase_mobile.thtml  state_demo.thtml  state_demo_mobile.thtml  styles_demo.thtml  todo.thtml  vector_demo.thtml  video_demo.thtml  video_demo_mobile.thtml
examples/assets/: toggle.riv
examples/demos/: counter.thtml  counter_mobile.thtml  input.thtml  input_mobile.thtml  media.thtml  media_mobile.thtml  navigation.thtml  navigation_mobile.thtml  showcase.thtml  showcase_mobile.thtml  state.thtml  state_mobile.thtml  styles.thtml  styles_mobile.thtml  todo.thtml  todo_mobile.thtml  video.thtml  video_mobile.thtml
examples/oxiterm_landing/: appserver.thtml  arch.thtml  index.thtml  index_mobile.thtml  tcss_ref.thtml  thtml_ref.thtml
examples/reference/: appserver.thtml  appserver_mobile.thtml  architecture.thtml  architecture_mobile.thtml  (+4 more)
oxiterm-a11y/: Cargo.toml
oxiterm-a11y/src/: lib.rs
oxiterm-cli/: Cargo.toml
oxiterm-cli/src/: main.rs
oxiterm-proto/: Cargo.toml
oxiterm-renderer/: Cargo.toml
oxiterm-renderer/src/: arena.rs  document.rs  lib.rs
oxiterm-renderer/src/layout/: engine.rs  mod.rs  types.rs
oxiterm-renderer/src/parser/: mod.rs  tcss.rs  thtml.rs
oxiterm-renderer/src/render/: buffer.rs  cache.rs  diff.rs  emitter.rs  kitty.rs  limiter.rs  mod.rs  renderer.rs  sixel.rs  unicode.rs
oxiterm-renderer/tests/: clickable_ambiguous_width.rs  test_rlottie.rs
oxiterm-server/: Cargo.toml
oxiterm-server/assets/: index.html  index_mobile.html  web_coord_tests.js
oxiterm-server/src/: backpressure.rs  config.rs  dispatcher.rs  events.rs  expand.rs  identity.rs  lib.rs  loader.rs  main.rs  metrics.rs  pathsafe.rs  placeholder.rs  ratelimit.rs  session.rs  state.rs  test_env.rs  throttle.rs  url_validator.rs  weather.rs  weather_app.rs  web.rs
oxiterm-server/src/ssh/: keys.rs  mod.rs  negotiator.rs  reactor.rs  server.rs
oxiterm-web/: Cargo.toml
oxiterm-web/src/: lib.rs
scratch/: check_pixels.py
scripts/: generate_docs_screenshots.sh  test_screen_debug.sh  test_screenshot.sh  test_screenshot_import.sh  test_terminals.sh
spotify-app-server/: Dockerfile  Dockerfile.test  app.py  docker-compose.yml  requirements.txt  spotify_panel_mobile.thtml  spotifycontrol.sh  test_app.py
(+24 files in other folders)
