[workspace]
members = [
    "oxiterm-server",
    "oxiterm-proto",
    "oxiterm-renderer",
    "oxiterm-cli",
    "oxiterm-web",
    "oxiterm-a11y",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
russh = "0.45"
russh-keys = "0.45"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
futures = "0.3"
parking_lot = "0.12"
taffy = "0.6"
ratatui = "0.29"
prometheus = "0.13"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
async-trait = "0.1"
nom = "7.1"
regex = "1.10"
unicode-width = "0.2"
subtle = "2.6"
url = "2"

