[package]
name = "oxiterm-a11y"
version = "0.1.0"
edition = "2021"

[dependencies]
oxiterm-proto = { path = "../oxiterm-proto" }
oxiterm-renderer = { path = "../oxiterm-renderer" }
serde = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
