[package]
name = "oxiterm-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
oxiterm-server = { path = "../oxiterm-server", features = ["web"] }
oxiterm-proto = { path = "../oxiterm-proto" }
oxiterm-renderer = { path = "../oxiterm-renderer" }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
notify = "6.1"
notify-debouncer-mini = "0.4"
prometheus.workspace = true
