[package]
name = "oxiterm-renderer"
version = "0.2.0"
edition = "2021"

[dependencies]
oxiterm-proto = { path = "../oxiterm-proto" }
taffy = { workspace = true }
serde = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
unicode-width = { workspace = true }
parking_lot = { workspace = true }
base64 = "0.22.1"
image = "0.25"

