[package]
name = "oxiterm-server"
version = "0.2.0"
edition = "2021"

[dependencies]
oxiterm-proto = { path = "../oxiterm-proto" }
oxiterm-renderer = { path = "../oxiterm-renderer" }
tokio = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
async-trait = { workspace = true }
ureq = { version = "2", features = ["json"] }
tokio-tungstenite = { version = "0.21", optional = true }

[features]
web = ["dep:tokio-tungstenite"]
